canvis a violi i boxplot

--- a/2.proyecto_team_apartados.ipynb
+++ b/2.proyecto_team_apartados.ipynb
@@ -43,19 +43,78 @@
     "from statsmodels.tsa.seasonal import seasonal_decompose\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
     "# Para seleccionar unicamente las regiones propias , descartamos Total US para la vista gráfica\n",
+    "#df_cp_cleaned=df_cp[df_cp.region != 'TotalUS']\n",
+    "#df_cp_CA=df_cp[df_cp.region == 'California']\n",
+    "#df_cp_noCA=df_cp[(df_cp.region != 'TotalUS') & (df_cp.region != \"California\")]\n",
+    "#df_cp_noCA_conventional=df_cp[(df_cp.region != 'TotalUS') & (df_cp.region != \"California\") & (df_cp.type=='conventional')]\n",
+    "#df_cp_noCA_organic=df_cp[(df_cp.region != 'TotalUS') & (df_cp.region != \"California\") & (df_cp.type=='organic')]\n",
+    "#df_cp_organic=df_cp[(df_cp.region != 'TotalUS') & (df_cp.type=='organic')]\n",
+    "#df_cp_conventional=df_cp[(df_cp.region != 'TotalUS') & (df_cp.type=='conventional')]\n",
+    "#df_cp_Denver=df_cp[df_cp.region == 'Denver']\n",
+    "\n",
+    "region_classification = {\n",
+    "        'Albany': 'City',\n",
+    "        'Atlanta': 'City',\n",
+    "        'BaltimoreWashington': 'Region',\n",
+    "        'Boise': 'City',\n",
+    "        'Boston': 'City',\n",
+    "        'BuffaloRochester': 'Region',\n",
+    "        'California': 'GreaterRegion',\n",
+    "        'Charlotte': 'City',\n",
+    "        'Chicago': 'City',\n",
+    "        'CincinnatiDayton': 'Region',\n",
+    "        'Columbus': 'City',\n",
+    "        'DallasFtWorth': 'Region',\n",
+    "        'Denver': 'City',\n",
+    "        'Detroit': 'City',\n",
+    "        'GrandRapids': 'City',\n",
+    "        'GreatLakes': 'GreaterRegion',\n",
+    "        'HarrisburgScranton': 'Region',\n",
+    "        'HartfordSpringfield': 'Region',\n",
+    "        'Houston': 'City',\n",
+    "        'Indianapolis': 'City',\n",
+    "        'Jacksonville': 'City',\n",
+    "        'LasVegas': 'City',\n",
+    "        'LosAngeles': 'City',\n",
+    "        'Louisville': 'City',\n",
+    "        'MiamiFtLauderdale': 'Region',\n",
+    "        'Midsouth': 'GreaterRegion',\n",
+    "        'Nashville': 'City',\n",
+    "        'NewOrleansMobile': 'Region',\n",
+    "        'NewYork': 'City',\n",
+    "        'Northeast': 'GreaterRegion',\n",
+    "        'NorthernNewEngland': 'Region',\n",
+    "        'Orlando': 'City',\n",
+    "        'Philadelphia': 'City',\n",
+    "        'PhoenixTucson': 'Region',\n",
+    "        'Pittsburgh': 'City',\n",
+    "        'Plains': 'GreaterRegion',\n",
+    "        'Portland': 'City',\n",
+    "        'RaleighGreensboro': 'Region',\n",
+    "        'RichmondNorfolk': 'Region',\n",
+    "        'Roanoke': 'City',\n",
+    "        'Sacramento': 'City',\n",
+    "        'SanDiego': 'City',\n",
+    "        'SanFrancisco': 'City',\n",
+    "        'Seattle': 'City',\n",
+    "        'SouthCarolina': 'Region',\n",
+    "        'SouthCentral': 'GreaterRegion',\n",
+    "        'Southeast': 'GreaterRegion',\n",
+    "        'Spokane': 'City',\n",
+    "        'StLouis': 'City',\n",
+    "        'Syracuse': 'City',\n",
+    "        'Tampa': 'City',\n",
+    "        'TotalUS': 'TotalUS',\n",
+    "        'West': 'GreaterRegion',\n",
+    "        'WestTexNewMexico': 'Region'\n",
+    "}\n",
+    "df_cp['RegionClass'] = df_cp['region'].map(region_classification)\n",
     "df_cp_cleaned=df_cp[df_cp.region != 'TotalUS']\n",
-    "df_cp_CA=df_cp[df_cp.region == 'California']\n",
-    "df_cp_noCA=df_cp[(df_cp.region != 'TotalUS') & (df_cp.region != \"California\")]\n",
-    "df_cp_noCA_conventional=df_cp[(df_cp.region != 'TotalUS') & (df_cp.region != \"California\") & (df_cp.type=='conventional')]\n",
-    "df_cp_noCA_organic=df_cp[(df_cp.region != 'TotalUS') & (df_cp.region != \"California\") & (df_cp.type=='organic')]\n",
-    "df_cp_organic=df_cp[(df_cp.region != 'TotalUS') & (df_cp.type=='organic')]\n",
-    "df_cp_conventional=df_cp[(df_cp.region != 'TotalUS') & (df_cp.type=='conventional')]\n",
-    "df_cp_Denver=df_cp[df_cp.region == 'Denver']\n",
-    "\n"
+    "df_cp_GreaterRegion=df_cp_cleaned[df_cp_cleaned['RegionClass']=='GreaterRegion']\n",
+    "df_cp_TotalUS=df_cp[df_cp['region']=='TotalUS']\n",
+    "df_cp_GreaterRegion_conv=df_cp_GreaterRegion[df_cp_GreaterRegion['type']=='conventional']\n",
+    "df_cp_GreaterRegion_org=df_cp_GreaterRegion[df_cp_GreaterRegion['type']=='organic']"
    ]
   },
   {
@@ -65,57 +124,109 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(20,30))\n",
+    "plt.figure(figsize=(10,6))\n",
     "sns.set_style('whitegrid')\n",
-    "sns.violinplot(x='Total Volume',y='region', data=df_cp_cleaned)\n",
-    "plt.xlabel('Total Volume',{'fontsize' : 'large'})\n",
-    "plt.ylabel('Region',{'fontsize':'large'})\n",
-    "plt.title(\"Total Volume en cada Region excepto TotalUS\",{'fontsize':20})\n"
+    "sns.violinplot(x='region',y='Total Volume', data=df_cp_GreaterRegion)\n",
+    "plt.xlabel('Region',{'fontsize' : 'large'})\n",
+    "plt.ylabel('Total Volume',{'fontsize':'large'})\n",
+    "plt.title(\"Total Volume en las grandes regiones excepto TotalUS\",{'fontsize':10})\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "871683b5-7370-4325-978d-09b2d6b39552",
+   "id": "d2c080eb-2651-4aa5-83e3-29cb806ee225",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(20,200))\n",
+    "plt.figure(figsize=(10,6))\n",
     "sns.set_style('whitegrid')\n",
-    "sns.violinplot(x='Total Volume',y='region',hue='type', data=df_cp_cleaned,palette=\"ch:r=-.5,l=.75\")\n",
-    "plt.xlabel('Total Volume',{'fontsize' : 'large'})\n",
-    "plt.ylabel('Region',{'fontsize':'large'})\n",
-    "plt.title(\"Total Volume en cada región excepto TotalUS segun type\",{'fontsize':15})"
+    "sns.violinplot(x='region',y='Total Volume', data=df_cp_TotalUS)\n",
+    "plt.xlabel('Region',{'fontsize' : 'large'})\n",
+    "plt.ylabel('Total Volume',{'fontsize':'large'})\n",
+    "\n",
+    "plt.title(\"Total Volume de TotalUS\",{'fontsize':10})\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "363cb253-83c3-4927-a0a8-6ba7a5eba9f0",
+   "metadata": {},
+   "source": [
+    "##### Conclusiones: En el gráfico de violín se observan la presencia de dos valores de concentración de datos , estas dos zonas aparecen en todas las regiones.\n",
+    "##### Ello induce a pensar que hay dos categorias de datos en cada región."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "985a77e8-2544-4773-9cde-78179c8cda9e",
+   "id": "22ba8a37-a220-4873-8d37-0f4ee69a5914",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(13,20))\n",
+    "plt.figure(figsize=(10,6))\n",
     "sns.set_style('whitegrid')\n",
-    "sns.violinplot(x='Total Volume',y='region', data=df_cp_conventional)\n",
-    "plt.xlabel('Total Volume',{'fontsize' : 'large'})\n",
-    "plt.ylabel('Region',{'fontsize':'large'})\n",
-    "plt.title(\"Total Volume en cada región tipo convencional\",{'fontsize':20})"
+    "sns.violinplot(x='region',y='Total Volume', data=df_cp_GreaterRegion_conv)\n",
+    "plt.xlabel('Region',{'fontsize' : 'large'})\n",
+    "plt.ylabel('Total Volume',{'fontsize':'large'})\n",
+    "\n",
+    "plt.title(\"Total Volume de aguacate convencional\",{'fontsize':10})\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9671982e-3cf1-4a6b-ae64-b6e7379f26da",
+   "id": "8c9e78d5-5ab5-41cb-9ba0-91a96845b438",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(13,20))\n",
+    "plt.figure(figsize=(10,6))\n",
     "sns.set_style('whitegrid')\n",
-    "sns.violinplot(x='Total Volume',y='region', data=df_cp_organic)\n",
-    "plt.xlabel('Total Volume',{'fontsize' : 'large'})\n",
-    "plt.ylabel('Region',{'fontsize':'large'})\n",
-    "plt.title(\"Total Volume en cada región tipo organic\",{'fontsize':20})"
+    "sns.violinplot(x='region',y='Total Volume', data=df_cp_GreaterRegion_org)\n",
+    "plt.xlabel('Region',{'fontsize' : 'large'})\n",
+    "plt.ylabel('Total Volume',{'fontsize':'large'})\n",
+    "plt.title(\"Total Volume de aguacate orgánico\",{'fontsize':10})\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75d9e717-b421-40d1-a10f-23d5a259029a",
+   "metadata": {},
+   "source": [
+    "##### Exploramos qué regiones son las mayores contribuyentes al Total Volume de Ventas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d77d9ac5-5fdd-46e8-8eeb-7b51990823c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "volume_by_region = df_cp_cleaned.groupby('region')['Total Volume'].sum().sort_values(ascending=False).to_frame()\n",
+    "\n",
+    "plt.figure(figsize=(14, 8))\n",
+    "\n",
+    "sns.barplot(data=volume_by_region, x='region', y='Total Volume', hue='region', palette='viridis')\n",
+    "\n",
+    "\n",
+    "plt.xticks(rotation=90)\n",
+    "\n",
+    "# Añadir título y etiquetas a los ejes\n",
+    "plt.title('Suma del Volumen Total de Ventas por Región excepto TotalUS')\n",
+    "plt.xlabel('Región')\n",
+    "plt.ylabel('Volumen Total de Ventas')\n",
+    "\n",
+    "# Mostrar el gráfico\n",
+    "plt.show()"
    ]
   },
   {
@@ -147,11 +258,55 @@
     "df_cp = df.copy()\n",
     "df_cp['Date'] = pd.to_datetime(df_cp['Date'])\n",
     "\n",
-    "plt.figure(figsize=(50,40))\n",
-    "sns.boxplot(df_cp_cleaned, x=\"year\", y=\"AveragePrice\", hue='type', fill=False, gap=1)\n",
-    "plt.xlabel('Año',{'fontsize' : 30})\n",
-    "plt.ylabel('Region',{'fontsize':'large'})\n",
-    "plt.title(\"Average Price por año y region\",{'fontsize':40})"
+    "plt.figure(figsize=(12, 6))\n",
+    "plt.title('Distribución de Precios Promedios de Aguacates por Año sin TotalUS',{'fontsize':10})\n",
+    "plt.xlabel('Año')\n",
+    "plt.ylabel('Average Price')\n",
+    "sns.boxplot(data=df_cp_cleaned, x='year', y='AveragePrice', hue='year', palette='Pastel1')\n",
+    "sns.stripplot(data=df_cp_cleaned, x='year', y='AveragePrice',alpha=0.3)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "b0f04595-33cf-4d9a-a155-22f297b18bcd",
+   "metadata": {},
+   "source": [
+    "##### En el boxplot incluyendo todos las regiones se observan numerosos outliers.\n",
+    "##### En el año 2016 hay mayor dispersión aunque la mediana es practicamente la misma."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92ed0271-7702-4641-9646-a3d48e5aae15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "from statsmodels.tsa.seasonal import seasonal_decompose\n",
+    "df = pd.read_csv(\"avocado.csv\")\n",
+    "df_cp = df.copy()\n",
+    "df_cp['Date'] = pd.to_datetime(df_cp['Date'])\n",
+    "\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "plt.title('Distribución de AveragePrice en Grandes Regiones y por año',{'fontsize':10})\n",
+    "plt.xlabel('Año')\n",
+    "plt.ylabel('Average Price')\n",
+    "sns.boxplot(data=df_cp_GreaterRegion, x='year', y='AveragePrice', hue='year', palette='Pastel1', notch=True)\n",
+    "sns.stripplot(data=df_cp_GreaterRegion, x='year', y='AveragePrice',alpha=0.3)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9272c469-756b-4c46-b925-403592a401b9",
+   "metadata": {},
+   "source": [
+    "##### Conclusiones: las ciudades y regiones al ser más pequeñas introducen más variabilidad en el precio"
    ]
   },
   {
@@ -161,11 +316,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(50,40))\n",
-    "sns.boxplot(df_cp_conventional, x=\"year\", y=\"AveragePrice\", fill=False, gap=1)\n",
+    "plt.figure(figsize=(12,6))\n",
+    "\n",
     "plt.xlabel('Año',{'fontsize' : 'large'})\n",
     "plt.ylabel('Region',{'fontsize':'large'})\n",
-    "plt.title(\"Average Price Convencional por año y region\",{'fontsize':20})"
+    "plt.title(\" Distribución Average Price convencional por año en Grandes Regiones\",{'fontsize':10})\n",
+    "sns.stripplot(data=df_cp_GreaterRegion_conv, x='year', y='AveragePrice',alpha=0.3)\n",
+    "sns.boxplot(data=df_cp_GreaterRegion_conv, x='year', y='AveragePrice', hue='year', palette='Pastel1', notch=True)\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -175,11 +334,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(50,40))\n",
-    "sns.boxplot(df_cp_organic, x=\"year\", y=\"AveragePrice\", hue=\"region\", fill=False, gap=1)\n",
+    "plt.figure(figsize=(12,6))\n",
+    "sns.boxplot(data=df_cp_GreaterRegion_org, x='year', y='AveragePrice', hue='year', palette='Pastel1', notch=True)\n",
     "plt.xlabel('Año',{'fontsize' : 'large'})\n",
     "plt.ylabel('Region',{'fontsize':'large'})\n",
-    "plt.title(\"Average Price Organico por año y region\",{'fontsize':20})"
+    "plt.title(\"Distribución Average Price organico por año en Grandes Regiones\",{'fontsize':10})\n",
+    "sns.stripplot(data=df_cp_GreaterRegion_org, x='year', y='AveragePrice',alpha=0.3)\n",
+    "plt.show()"
    ]
   },
   {
@@ -199,6 +360,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1f9d2080-23e1-4173-9c38-c01e7f0c506b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Configurar el tamaño del gráfico\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "\n",
+    "# Crear el histograma para la columna 'Total Volume'\n",
+    "plt.hist(df_cp_cleaned['Total Volume'], bins=100, color='skyblue', edgecolor='black')\n",
+    "\n",
+    "# Añadir título y etiquetas a los ejes\n",
+    "plt.title('Histograma de Total Volume excepto TotalUS')\n",
+    "plt.xlabel('Total Volume')\n",
+    "plt.ylabel('Frecuencia')\n",
+    "\n",
+    "# Mostrar el gráfico\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0774a632",
    "metadata": {},
    "outputs": [],
@@ -211,11 +394,12 @@
     "df = pd.read_csv(\"avocado.csv\")\n",
     "df_cp = df.copy()\n",
     "df_cp['Date'] = pd.to_datetime(df_cp['Date'])\n",
-    "plt.figure(figsize=(20,6))\n",
-    "plt.xlim(0.0,0.6*10**7)\n",
-    "plt.ylim(0.0,2*10**-6)\n",
-    "plt.title('Histograma de Ventas Totales', fontweight = \"bold\")\n",
-    "plt.hist(df_cp_cleaned['Total Volume'], bins= 200, density=0.5, color='green',alpha=0.7)\n",
+    "plt.figure(figsize=(12,6))\n",
+    "plt.xlim(0.0,0.8*10**7)\n",
+    "#plt.ylim(0.0,2*10**-6)\n",
+    "plt.title('Histograma de Ventas Totales en Greater Regions', fontweight = \"bold\")\n",
+    "plt.hist(df_cp_GreaterRegion['Total Volume'], bins= 100, density=0.5, color='green',alpha=0.7)\n",
+    "#plt.hist(df_cp_GreaterRegion_org['Total Volume'], bins= 100, density=0.5, color='green',alpha=0.7)\n",
     "plt.xlabel('Ventas')\n",
     "plt.ylabel('Frecuencia')\n",
     "plt.show()"
@@ -336,15 +520,45 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "#from statsmodels.tsa.seasonal import seasonal_decompose\n",
+    "from statsmodels.tsa.seasonal import seasonal_decompose\n",
     "df = pd.read_csv(\"avocado.csv\")\n",
     "df_cp = df.copy()\n",
     "df_cp['Date'] = pd.to_datetime(df_cp['Date'])\n",
     "\n",
     "y=df_cp.groupby(['year'])['AveragePrice'].mean()\n",
     "x=(df_cp['year'].unique())\n",
-    "\n",
+    "plt.xlabel(\"Año\")\n",
+    "plt.ylabel(\"AvgPrice\")\n",
     "plt.plot(x, y)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddbf7f69-7c96-4782-a087-f20ef9ab94cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cp_cleaned['estacion'] = df_cp_cleaned['Date'].dt.month % 12 // 3 + 1\n",
+    "print(df_cp_cleaned.head(5))\n",
+    "estacion = {1: 'Invierno', 2: 'Primavera', 3: 'Verano', 4: 'Otoño'}\n",
+    "df_cp_cleaned['estacion'] = df_cp_cleaned['estacion'].map(estacion)\n",
+    "print(\"ya mapeado\")\n",
+    "print(df_cp_cleaned.head(5))\n",
+    "# Agrupar por estación y calcular el promedio de 'AveragePrice'\n",
+    "seasonal_trend = df_cp_cleaned.groupby('estacion')['AveragePrice'].mean()\n",
+    "\n",
+    "# Graficar la evolución de precios promedio por estación\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(seasonal_trend.index, seasonal_trend.values, marker='o', color='g')\n",
+    "\n",
+    "# Añadir título y etiquetas\n",
+    "plt.title(' Avg Price por Estación del Año')\n",
+    "plt.xlabel('Estación')\n",
+    "plt.ylabel('Avg Price')\n",
+    "plt.grid(True)\n",
+    "plt.xticks(ticks=[1, 2, 3, 4], labels=['Invierno', 'Primavera', 'Verano', 'Otoño'])\n",
     "plt.show()"
    ]
   },
@@ -379,11 +593,11 @@
     "plt.hist(\n",
     "    [df_cp_cleaned[df_cp_cleaned['type'] == 'conventional']['AveragePrice'], \n",
     "     df_cp_cleaned[df_cp_cleaned['type'] == 'organic']['AveragePrice']],\n",
-    "    bins=80, label=['Conventional', 'Organic'], alpha=0.7\n",
+    "    bins=80, label=['Conventional', 'Organic'], alpha=0.5\n",
     ")\n",
     "\n",
     "# Add titles and labels\n",
-    "plt.title(\"Histogram of Average Avocado Prices by Type\")\n",
+    "plt.title(\"Histograma of AveragePrice por tipo\")\n",
     "plt.xlabel(\"Average Price\")\n",
     "plt.ylabel(\"Frequency\")\n",
     "plt.legend(loc='upper right')\n"
