Exemple de modificacio de Jupyter sense continguts.

--- a/10.Avocados_del_diablo.ipynb
+++ b/10.Avocados_del_diablo.ipynb
@@ -427,12 +427,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "40936885",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "* Aquest apartat crec que no cal."
+   ]
   },
   {
    "cell_type": "markdown",
