???? quins canvis tenim aqui ??

--- a/10.Avocados_del_diablo.ipynb
+++ b/10.Avocados_del_diablo.ipynb
@@ -115,6 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#display(df_cp)\n",
     "print(\"Nuestra clasifiacion de clases de regiones:\",pd.unique(df_cp['region_class']))\n",
     "#display(df_cp.head(5))\n",
     "#display(av.region_classification['GreatRegions'])\n",
@@ -884,7 +885,7 @@
     "c_values= list(df_convencionals['region_class'].map(classification_colors))\n",
     "plt.scatter(x= x_values, y= y_values, c=c_values, alpha = .5)\n",
     "plt.title('Tipo convencionales (log)')\n",
-    "plt.xscale('log')\n",
+    "#plt.xscale('log')\n",
     "plt.ylabel('Average price')\n",
     "plt.xlabel('Market size')\n",
     "legend_patches = [mpatches.Patch(color=color, label=region) for region, color in classification_colors.items()]\n",
@@ -897,7 +898,7 @@
     "c_values= list(df_organic['region_class'].map(classification_colors))\n",
     "plt.scatter(x= x_values, y= y_values, c=c_values, alpha = .5)\n",
     "plt.title('Tipo organicos (log)')\n",
-    "plt.xscale('log')\n",
+    "#plt.xscale('log')\n",
     "plt.ylabel('Average price')\n",
     "plt.xlabel('Market size')\n",
     "legend_patches = [mpatches.Patch(color=color, label=region) for region, color in classification_colors.items()]\n",
@@ -2311,14 +2312,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7abed627",
+   "metadata": {},
+   "source": [
+    "### West: Primer ejemplo del modelo Final que vamos a mostrar. Incluye un plotting avanzado y las variables X más importantes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "3de25d70",
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Primer ejemplo del modelo Final que vamos a mostrar. Incluye un plotting avanzado y las variables X más importantes\n",
-    "\n",
     "from sklearn import preprocessing\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
@@ -2346,9 +2353,6 @@
     "df_local['Standard Bags'] = (df_local['Total Bags'] - df_local['Total Bags'].mean()) /df_local['Total Bags'].std()\n",
     "\n",
     "# display(df_local)\n",
-    "\n",
-    "# display(df_local)\n",
-    "\n",
     "Variables = ['Standard Volume', 'year','n_week', 'type_Bool'] #,,,  , 'ST_Volume_Hass_XL',  'ST_Volume_Hass_S', 'ST_Volume_Hass_L' , 'Standard Bags', 'n_Quarter'\n",
     "# group_fit = df_fit.groupby('Quarter').agg({'AveragePrice':'mean', 'Total Volume':'mean' }).reset_index()\n",
     "X= df_local[Variables]\n",
@@ -2362,6 +2366,7 @@
     "poly_model = LinearRegression()\n",
     "\n",
     "X_poly = poly_features.fit_transform(X_train)\n",
+    "print(f\"X_poly: {len(X_poly)} {X_poly}\")\n",
     "poly_model.fit(X_poly, y_train)\n",
     "y_pred_poly_train = poly_model.predict(X_poly)\n",
     "\n",
@@ -2415,8 +2420,10 @@
     "\n",
     "\n",
     "\n",
-    "plt.scatter(x = X_to_plot['Date'], y= y_pred_plot, color= 'Skyblue')\n",
-    "plt.scatter(x = X_to_plot['Date'], y= Y_to_plot, color= 'blue')\n",
+    "plt.scatter(x = X_to_plot['Date'], y= y_pred_plot, color= 'Skyblue', label = 'Predicción modelo')\n",
+    "plt.scatter(x = X_to_plot['Date'], y= Y_to_plot, color= 'blue',  label = 'Valores reales')\n",
+    "plt.title(\"Average Price en West\")\n",
+    "plt.legend()\n",
     "plt.grid()\n",
     "plt.show()\n",
     "# print(X_train, y_pred_poly_train)"
