Resolt problema del reset_index()

--- a/10.Avocados_del_diablo.ipynb
+++ b/10.Avocados_del_diablo.ipynb
@@ -2446,8 +2446,8 @@
     "for region in pd.unique(region_largest):\n",
     "    # region = 'TotalUS'\n",
     "    elast_region_bags = df_cp_elast[df_cp_elast['region'] == region].copy()\n",
-    "    elast_region_bags = elast_region_bags[elast_region_bags['type'] == type_avocado].copy().reset_index()\n",
-    "    \n",
+    "    elast_region_bags = elast_region_bags[elast_region_bags['type'] == type_avocado].copy()#.reset_index()\n",
+    "\n",
     "    # temp_market_size= elast_region['Total Volume'].sum()\n",
     "\n",
     "    elast_region_bags['Small bag elasticity']= elast_region_bags['Small Bags'].pct_change() /  elast_region_bags['AveragePrice'].pct_change()\n",
@@ -2459,9 +2459,8 @@
     "    elast_region_bags =elast_region_bags[-elast_region_bags['Small bag elasticity'].isin([-np.inf,np.inf])]\n",
     "    elast_region_bags =elast_region_bags[-elast_region_bags['Large bag elasticity'].isin([-np.inf,np.inf])]\n",
     "    elast_region_bags =elast_region_bags[-elast_region_bags['XLarge bag elasticity'].isin([-np.inf,np.inf])]\n",
-    "\n",
-    "    # Dona problemes a la primera execucio\n",
-    "    #elast_region_bags = elast_region_bags.reset_index()\n",
+    "    \n",
+    "    elast_region_bags = elast_region_bags.reset_index()\n",
     "\n",
     "    small_heights.append(elast_region_bags.loc[1:,'Small bag elasticity'].mean())\n",
     "    Large_heights.append(elast_region_bags.loc[1:,'Large bag elasticity'].mean())\n",
@@ -2525,7 +2524,7 @@
     "for region in pd.unique(region_largest):\n",
     "    # region = 'TotalUS'\n",
     "    elast_region_bags = df_cp_elast[df_cp_elast['region'] == region].copy()\n",
-    "    elast_region_bags = elast_region_bags[elast_region_bags['type'] == type_avocado].copy().reset_index()\n",
+    "    elast_region_bags = elast_region_bags[elast_region_bags['type'] == type_avocado].copy()#.reset_index()\n",
     "    \n",
     "    # temp_market_size= elast_region['Total Volume'].sum()\n",
     "\n",
@@ -2539,8 +2538,7 @@
     "    elast_region_bags =elast_region_bags[-elast_region_bags['Large bag elasticity'].isin([-np.inf,np.inf])]\n",
     "    elast_region_bags =elast_region_bags[-elast_region_bags['XLarge bag elasticity'].isin([-np.inf,np.inf])]\n",
     "\n",
-    "    # Dona problemes a la primera execucio\n",
-    "    #elast_region_bags = elast_region_bags.reset_index()\n",
+    "    elast_region_bags = elast_region_bags.reset_index()\n",
     "\n",
     "    small_heights.append(elast_region_bags.loc[1:,'Small bag elasticity'].mean())\n",
     "    Large_heights.append(elast_region_bags.loc[1:,'Large bag elasticity'].mean())\n",
