Reorganitzar apartats analisi

--- a/10.Avocados_del_diablo.ipynb
+++ b/10.Avocados_del_diablo.ipynb
@@ -251,6 +251,100 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7160305b",
+   "metadata": {},
+   "source": [
+    "##### Correlación volumen total entre las \"grandes regiones\" y \"regiones\" con total US\n",
+    "* TODO: IMPORTANT VOLUM VENTAS GREATERREGIONS == TOTALUS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8394ee8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_great_regions = df_cp[(df_cp['region_class']=='Region') | (df_cp['region_class']=='City')]\n",
+    "df_USA = df_cp[df_cp['region']=='TotalUS']\n",
+    "print((df_great_regions['Total Volume'].sum() - df_USA['Total Volume'].sum())*100/df_USA['Total Volume'].sum() )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19441a1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index_df= df_cp.copy()\n",
+    "index_df= index_df[index_df['region_class']=='City']\n",
+    "\n",
+    "region_largest= list(index_df.groupby('region')['Total Volume'].sum().nlargest(3).index)\n",
+    "# region_largest.pop('TotalUS')\n",
+    "\n",
+    "df_greatest_pie = df_cp.groupby('region')['Total Volume'].sum().nlargest(8)   #df_cp[df_cp['region'].isin(region_largest)]\n",
+    "df_greatest_pie.loc['TotalUS'] = 2*df_greatest_pie.loc['TotalUS'] - df_greatest_pie.loc[:].sum()\n",
+    "df_greatest_pie.rename( index={'TotalUS':'Plains'}, inplace=True)\n",
+    "df_greatest_pie.plot.pie(title=\"Market size\", legend=False, \\\n",
+    "                   autopct='%1.1f%%', \\\n",
+    "                   shadow=True, startangle=0)\n",
+    "#plt.legend(loc='best'); plt.grid(True) # figsize=(12,6)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04562baf",
+   "metadata": {},
+   "source": [
+    "##### Correlación de Volumen Total de las ciudades con Volumen de Total US (alvocado conventional)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4a2e7a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prova_= df_cp.copy()\n",
+    "index_df= df_cp.copy()\n",
+    "prova_= prova_[prova_['type']=='conventional']\n",
+    "dictionary_to_regions={}\n",
+    "\n",
+    "index_df= index_df[index_df['region_class']=='GreaterRegion']\n",
+    "region_largest= list(index_df.groupby('region')['Total Volume'].sum().nlargest(5).index)\n",
+    "region_largest.append('TotalUS')\n",
+    "\n",
+    "for region in region_largest:\n",
+    "    prova_temp = prova_[prova_['region']==region]\n",
+    "    prova_temp=prova_temp.sort_values(by='Date')\n",
+    "\n",
+    "    dictionary_to_regions[region] = list(prova_temp['Total Bags'])\n",
+    "\n",
+    "df_corr = pd.DataFrame(dictionary_to_regions)\n",
+    "# display(df_corr)\n",
+    "corr_matrix = df_corr.corr()\n",
+    "\n",
+    "# Visualizar la matriz de correlación\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.heatmap(corr_matrix, annot=True, cmap='coolwarm', fmt='.2f')\n",
+    "plt.title('Matriz de Correlación')\n",
+    "plt.show()\n",
+    "\n",
+    "# Identificar columnas con correlación alta (umbral = 0.8)\n",
+    "threshold = 0.9\n",
+    "to_drop = []\n",
+    "for column in corr_matrix.columns:\n",
+    "    if any((corr_matrix[column].abs() > threshold) & (corr_matrix.index != column)):\n",
+    "        to_drop.append(column)\n",
+    "        \n",
+    "print(f\"Variables altamente correlacionadas con otras: {to_drop}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "49a9ae69",
    "metadata": {},
    "source": [
@@ -870,7 +964,7 @@
    "id": "d58a7d8f",
    "metadata": {},
    "source": [
-    "### Subset alvocados convencionals\n",
+    "#### Subset alvocados convencionals\n",
     "* Aqui tendriamos que incluir una idea de si todas las regiones hacen un número similar total de pedidos\n",
     "* Claramente hay sitios donde los aguacates son más baratos, miremos si tiene que ver con otras características"
    ]
@@ -928,7 +1022,7 @@
    "id": "e4602968",
    "metadata": {},
    "source": [
-    "### Majors mercats el preu mig tendeix a abaratirse\n",
+    "#### Majors mercats el preu mig tendeix a abaratirse\n",
     "* Aqui podem veure que a majors mercats el preu mig tendeix a abaratirse. \n",
     "* Aqui estem prenent cada regio com equivalentment valida\n",
     "* cambiar el 2018 no parece afectar los resultados"
@@ -1546,7 +1640,8 @@
     "plt.scatter(x= x_values, y= y_values)#, c=c_values)\n",
     "plt.ylabel('Price difference organic vs conventional')\n",
     "plt.xlabel('Market size')\n",
-    "plt.grid()"
+    "plt.grid()\n",
+    "plt.show()"
    ]
   },
   {
@@ -1588,99 +1683,6 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "#df_grouped_mean"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "edaa99db-948c-4549-8772-acb13b6a62a1",
-   "metadata": {},
-   "source": [
-    "#### Correlación volumen total entre las \"grandes regiones\" y \"regiones\" con total US\n",
-    "* TODO: IMPORTANT VOLUM VENTAS GREATERREGIONS == TOTALUS"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ffc86c79",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_great_regions = df_cp[(df_cp['region_class']=='Region') | (df_cp['region_class']=='City')]\n",
-    "df_USA = df_cp[df_cp['region']=='TotalUS']\n",
-    "print((df_great_regions['Total Volume'].sum() - df_USA['Total Volume'].sum())*100/df_USA['Total Volume'].sum() )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6c2ef3f0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "index_df= df_cp.copy()\n",
-    "index_df= index_df[index_df['region_class']=='City']\n",
-    "\n",
-    "region_largest= list(index_df.groupby('region')['Total Volume'].sum().nlargest(3).index)\n",
-    "# region_largest.pop('TotalUS')\n",
-    "\n",
-    "df_greatest_pie = df_cp.groupby('region')['Total Volume'].sum().nlargest(8)   #df_cp[df_cp['region'].isin(region_largest)]\n",
-    "df_greatest_pie.loc['TotalUS'] = 2*df_greatest_pie.loc['TotalUS'] - df_greatest_pie.loc[:].sum()\n",
-    "df_greatest_pie.rename( index={'TotalUS':'Plains'}, inplace=True)\n",
-    "df_greatest_pie.plot.pie(title=\"Market size\", legend=False, \\\n",
-    "                   autopct='%1.1f%%', \\\n",
-    "                   shadow=True, startangle=0)\n",
-    "#plt.legend(loc='best'); plt.grid(True) # figsize=(12,6)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "68bd45dd-adad-43ec-b9b9-9589c8524398",
-   "metadata": {},
-   "source": [
-    "### Correlación de Volumen Total de las ciudades con Volumen de Total US (alvocado conventional)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b164a8ec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prova_= df_cp.copy()\n",
-    "index_df= df_cp.copy()\n",
-    "prova_= prova_[prova_['type']=='conventional']\n",
-    "dictionary_to_regions={}\n",
-    "\n",
-    "index_df= index_df[index_df['region_class']=='GreaterRegion']\n",
-    "region_largest= list(index_df.groupby('region')['Total Volume'].sum().nlargest(5).index)\n",
-    "region_largest.append('TotalUS')\n",
-    "\n",
-    "for region in region_largest:\n",
-    "    prova_temp = prova_[prova_['region']==region]\n",
-    "    prova_temp=prova_temp.sort_values(by='Date')\n",
-    "\n",
-    "    dictionary_to_regions[region] = list(prova_temp['Total Bags'])\n",
-    "\n",
-    "df_corr = pd.DataFrame(dictionary_to_regions)\n",
-    "# display(df_corr)\n",
-    "corr_matrix = df_corr.corr()\n",
-    "\n",
-    "# Visualizar la matriz de correlación\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "sns.heatmap(corr_matrix, annot=True, cmap='coolwarm', fmt='.2f')\n",
-    "plt.title('Matriz de Correlación')\n",
-    "plt.show()\n",
-    "\n",
-    "# Identificar columnas con correlación alta (umbral = 0.8)\n",
-    "threshold = 0.9\n",
-    "to_drop = []\n",
-    "for column in corr_matrix.columns:\n",
-    "    if any((corr_matrix[column].abs() > threshold) & (corr_matrix.index != column)):\n",
-    "        to_drop.append(column)\n",
-    "        \n",
-    "print(f\"Variables altamente correlacionadas con otras: {to_drop}\")"
    ]
   },
   {
