Afegir plt.show() faltants.

--- a/10.Avocados_del_diablo.ipynb
+++ b/10.Avocados_del_diablo.ipynb
@@ -3571,9 +3571,11 @@
     "# Necesitamos predecir previamente el volúmen de venta o Total Volume\n",
     "# Este modelo sera por una sola región, Californai\n",
     "\n",
-    "df = pd.read_csv(\"avocado.csv\")\n",
-    "df_cp = df.copy()\n",
-    "df_cp['Date'] = pd.to_datetime(df_cp['Date'])\n",
+    "#df = pd.read_csv(\"avocado.csv\")\n",
+    "#df_cp = df.copy()\n",
+    "#df_cp['Date'] = pd.to_datetime(df_cp['Date'])\n",
+    "av.init()\n",
+    "dp_cp = av.df(\"df_cp\")\n",
     "\n",
     "df_cp['region_class']= df_cp['region'].map(region_classification)\n",
     "\n",
@@ -3781,9 +3783,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"avocado.csv\")\n",
-    "df_cp = df.copy()\n",
-    "df_cp['Date'] = pd.to_datetime(df_cp['Date'])\n",
+    "#df = pd.read_csv(\"avocado.csv\")\n",
+    "#df_cp = df.copy()\n",
+    "#df_cp['Date'] = pd.to_datetime(df_cp['Date'])\n",
+    "av.init()\n",
+    "dp_cp = av.df(\"df_cp\")\n",
     "\n",
     "df_cp['region_class']= df_cp['region'].map(region_classification)\n",
     "\n",
